# hockey

./: .dockerignore  .env.example  .env.prod.example  .gitignore  ASSETS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Dockerfile.debug  Makefile  README.docker.md  README.md  README_AUTH_MIGRATION.md  REORGANIZATION.md  SECURITY.md  TESTING.md  TEST_RESULTS.md  docker-compose.prod.yaml  docker-compose.yaml  hockey.yaml  insert-teams.js  next.config.ts  package.json  playwright.config.ts
backend/: .dockerignore  .editorconfig  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  clippy.toml  docker-compose.yml  rustfmt.toml
backend/db/: init.sql
backend/migrations/: 20250713000001_create_users_table.sql  20250803120003_create_refresh_tokens_table.sql
backend/scripts/: generate_keys.sh  test_countries.sh  test_events.sh  test_matches.sh  test_player_contracts.sh  test_players.sh  test_seasons.sh  test_team_participation.sh  test_teams.sh
backend/src/: config.rs  docs.rs  errors.rs  http.rs  lib.rs  main.rs
backend/src/auth/: e2e_tests.rs  jwt.rs  middleware.rs  mod.rs  service.rs
backend/src/auth/fixtures/: auth_users.sql
backend/src/common/: paging.rs
backend/src/country/: mod.rs  routes.rs
backend/src/country/service/: mod.rs  test.rs
backend/src/event/: business.rs  mod.rs  routes.rs
backend/src/event/service/: mod.rs  test.rs
backend/src/event/service/fixtures/: get_events.sql
backend/src/match/: business.rs  mod.rs  routes.rs
backend/src/match/service/: mod.rs  test.rs
backend/src/match/service/fixtures/: events.sql  matches.sql  players.sql  score_events.sql  seasons.sql  teams.sql
backend/src/player/: business.rs  mod.rs  routes.rs
backend/src/player/service/: mod.rs  test.rs
backend/src/player/service/fixtures/: get_players.sql
backend/src/player_contract/: business.rs  mod.rs  routes.rs
backend/src/player_contract/service/: mod.rs  test.rs
backend/src/player_contract/service/fixtures/: events.sql  players.sql  teams.sql
backend/src/season/: business.rs  mod.rs  routes.rs
backend/src/season/service/: mod.rs  test.rs
backend/src/season/service/fixtures/: get_seasons.sql  roster.sql
backend/src/team/: business.rs  mod.rs  routes.rs
backend/src/team/service/: mod.rs  test.rs
backend/src/team/service/fixtures/: get_teams.sql  team_detail.sql
backend/src/team_participation/: business.rs  mod.rs  routes.rs
backend/src/team_participation/service/: mod.rs  test.rs
backend/src/team_participation/service/fixtures/: get_team_participation.sql  seasons.sql
backend/tests/: README.md  event.rs  integration_tests.rs  match.rs  match_integration_tests.rs  player.rs  player_contract.rs  season.rs  team.rs  team_participation.rs
backend/tests/fixtures/: README.md  events.sql  match_deps.sql  matches.sql  player_contract_deps.sql  player_contracts.sql  players.sql  season_deps.sql  seasons.sql  team_participation_deps.sql  team_participations.sql
docs/: Home.md
frontend/: .dockerignore  .env.example  (+9 more)
(+461 files in other folders)
