[package]
name = "hockey"
version = "0.1.8"
edition = "2021"

[[bin]]
name = "hockey"
path = "src/main.rs"

[[bin]]
name = "create_admin"
path = "src/bin/create_admin.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
  "trace",
  "compression-gzip",
  "cors",
] }

# Database
# Using bundled feature to statically link SQLite for distroless compatibility
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "chrono",
  "uuid",
] }
libsqlite3-sys = { version = "*", features = ["bundled"] }

# Templating
maud = { version = "0.26", features = ["axum"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"

# Authentication
bcrypt = "0.15"
uuid = { version = "1.0", features = ["serde", "v4"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Internationalization
fluent-static = "0.5"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# Asset embedding (for production builds)
rust-embed = { version = "8.0", features = ["debug-embed", "include-exclude"] }
mime_guess = "2.0"

[dev-dependencies]
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
axum-test = "15"
pretty_assertions = "1.4"
fake = "2.9"
rstest = "0.23"

[profile.release]
# Optimize for size and performance
opt-level = "z"   # Optimize for size
lto = "fat"       # Full Link-Time Optimization
codegen-units = 1 # Better optimization, slower compile
strip = true      # Strip symbols from binary
panic = "abort"   # Smaller binary, no unwinding
