[package]
name = "jura_hockey"
version = "0.1.0"
edition = "2024"

[dependencies]
aide = { version = "0.15.0", features = [
	"axum",
	"axum-extra",
	"axum-query",
	"scalar",
	"axum-json",
	"macros",
] }
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = [
	"error-response",
	"json-deserializer",
	"form",
	"tracing",
] }
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
uuid = { version = "1.4.0", features = ["v4", "serde"] }
schemars = { version = "0.9.0", features = ["uuid1"] }
dotenvy = "0.15.7"
clap = { version = "4.3.0", features = ["derive", "env"] }
sqlx = { version = "0.8.6", features = ["sqlite", "uuid", "runtime-tokio"] }
anyhow = { version = "1.0.98" }
tracing = { version = "0.1.37", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bcrypt = "0.15"
thiserror = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
axum-test = "17.3.0"
